example/lib/src/generated/errors/errors_localization_km.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Khmer Central Khmer (`km`).
class ErrorsLocalizationKm extends ErrorsLocalization {
  ErrorsLocalizationKm([String locale = 'km']) : super(locale);

  @override
  String get error => 'មានកំហុសមួយកើតឡើង';

  @override
  String get unexpectedError => 'មានកំហុសមិនគ្រាន់កន្លែងមួយ';

  @override
  String get bugReportSentText => 'របាយការណ៍កំហុសត្រូវបានផ្ញើដោយជោគជ័យ។';
}
